--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,6 +60,58 @@ jobs:
         displayName: 'build android'
         env:
           CI: true  
+      
+      - task: XplatGenerateReleaseNotes@3
+        displayName: Generate release notes
+        inputs:
+          outputfile: '$(Build.ArtifactStagingDirectory)\releasenotes.md'
+          outputVariableName: OutputText
+          templateLocation: InLine
+          inlinetemplate: |
+              # Notes for build 
+              **Build Number**: {{buildDetails.id}}
+              **Build Trigger PR Number**: {{lookup buildDetails.triggerInfo 'pr.number'}} 
+
+              # Associated Pull Requests ({{pullRequests.length}})
+              {{#forEach pullRequests}}
+              {{#if isFirst}}### Associated Pull Requests (only shown if  PR) {{/if}}
+              *  **PR {{this.id}}**  {{this.title}}
+              {{/forEach}}
+
+              # Builds with associated WI/CS ({{builds.length}})
+              {{#forEach builds}}
+              {{#if isFirst}}## Builds {{/if}}
+              ##  Build {{this.build.buildNumber}}
+              {{#forEach this.commits}}
+              {{#if isFirst}}### Commits {{/if}}
+              - CS {{this.id}}
+              {{/forEach}}
+              {{#forEach this.workitems}}
+              {{#if isFirst}}### Workitems {{/if}}
+              - WI {{this.id}}
+              {{/forEach}} 
+              {{/forEach}}
+
+              # Global list of WI ({{workItems.length}})
+              {{#forEach workItems}}
+              {{#if isFirst}}## Associated Work Items (only shown if  WI) {{/if}}
+              *  **{{this.id}}**  {{lookup this.fields 'System.Title'}}
+                - **WIT** {{lookup this.fields 'System.WorkItemType'}} 
+                - **Tags** {{lookup this.fields 'System.Tags'}}
+              {{/forEach}}
+
+              {{#forEach commits}}
+              {{#if isFirst}}### Associated commits{{/if}}
+              * ** ID{{this.id}}** 
+                -  **Message:** {{this.message}}
+                -  **Commited by:** {{this.author.displayName}} 
+                -  **FileCount:** {{this.changes.length}} 
+              {{#forEach this.changes}}
+                    -  **File path (TFVC or TfsGit):** {{this.item.path}}  
+                    -  **File filename (GitHub):** {{this.filename}}  
+              {{/forEach}}
+              {{/forEach}}
+
 
       - task: PublishBuildArtifacts@1
         displayName: 'Publish android artifacts'
@@ -67,3 +119,9 @@ jobs:
           PathtoPublish: 'build/app/outputs/flutter-apk'
           ArtifactName: 'android'
           publishLocation: 'Container'
+   
+      - task: PublishBuildArtifacts@1
+        displayName: publish doc
+        inputs:
+          artifactName: 'OutputText'
+          targetPath: '$(Build.ArtifactStagingDirectory)\releasenotes.md'
